15.05.2025:
    - Removed rifle entity. Now shooting works just through sword.
    - Now sword rotates to shoot direction.
    - Made a infinite slowmo on shift key.

14.05.2025:
    - Added hit boosters.
    - Changed gravity multiplier while velocity.y is greater than 10 so we don't fly that high.
    - Trying out that sword will always damage enemies, regardless of spin speed.
    - Fixed bug when we saved entity flags as u64, but loading as i32. Added to_u64 to my_libs.

12.05.2025:
    - Made that in big sword boost vertical velocity goes go zero, so we move horizontally.
    - Remade rifle. Now we don't need to go into rifle mode - we can just shoot from sword tip.

11.05.2025:
    - Movement improvements. Increased acceleration and made snapping to ground better.

10.05.2025:
    - Rifle controlling. We could move with that for now.

09.05.2025:
    - Movements improvements. Speed limits for more control and for cooler big sword activation.
    - Wall vertical boost for nicer movement.
    - Propellers reworked. Now they just keep player in claws (without spin requirement) before propeller ends. That at least gives us options to test some level ideas, whereas if player could leave them - that's just nothing new, because player will be able to gain vertical places (for example) with different things.

04.05.2025:
    - Movement reworked, big sword now enables for time on mouse button and gives speed boost. Need to make levels to see how that really should work.
    - Removed wall climbing for now. We'll see what we could add for vertical movement.
    - Made in-game log messages.

03.05.2025:
    - Movement almost reworked.

29.04.2025:
    - Lightmap debug view control improvements.
    - Added ability to have ground blocks as light on lightmap.

28.04.2025:
    - Fixed blending issue. Now lightmaps look as they should.

27.04.2025:
    - Light work, finally added ability to control light intencity by changing light opacity.